RESOLVED FIXED189667
Swipe snapshot can get stuck if swiping is disabled while it is visible
https://bugs.webkit.org/show_bug.cgi?id=189667
Summary Swipe snapshot can get stuck if swiping is disabled while it is visible
Tim Horton
Reported 2018-09-17 10:44:48 PDT
Swipe snapshot can get stuck if swiping is disabled while it is visible
Attachments
Patch (5.42 KB, patch)
2018-09-17 10:45 PDT, Tim Horton
no flags
Patch (5.46 KB, patch)
2018-09-17 10:45 PDT, Tim Horton
no flags
Patch (5.46 KB, patch)
2018-09-17 10:46 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2018-09-17 10:45:01 PDT
Tim Horton
Comment 2 2018-09-17 10:45:52 PDT
Tim Horton
Comment 3 2018-09-17 10:46:37 PDT
Simon Fraser (smfr)
Comment 4 2018-09-17 13:54:42 PDT
Comment on attachment 349902 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=349902&action=review > Source/WebKit/UIProcess/Cocoa/ViewGestureController.h:253 > + bool m_swipeGestureEnabled { true }; Group with other bools.
Tim Horton
Comment 5 2018-09-17 15:00:16 PDT
There aren't any other bools in the platform-independent section. https://trac.webkit.org/changeset/236086/webkit
Radar WebKit Bug Importer
Comment 6 2018-09-17 15:02:35 PDT
Note You need to log in before you can comment on or make changes to this bug.